<resources>
    <string name="app_name">TheMobileVN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="test_raw">TpisIsApecretTes</string>
    <string name="loading">Loading...</string>

    // Home Page
    <string name="no_data">Không tìm thấy sản phẩm với từ khóa <b>\"%s\"</b></string>
    <string name="no_data_advance">Không tìm thấy sản phẩm với lựa chọn này</string>
    <string name="have_data">Cửa hàng có bán sản phẩm này</string>
    <string name="search_view_notice">Nhấn vào biểu tượng kính lúp và nhập tên sản phẩm để bắt đầu tìm kiếm...</string>

    // Customize Search Page
    <string name="customize_search">Tìm Kiếm Nâng Cao</string>
    <string name="please_input_device_name_need_search">Vui lòng nhập tên thiết bị cần tìm</string>
    <string name="follow_geographical_area">Theo khu vực địa lý</string>
    <string name="follow_price_group">Theo nhóm giá</string>
    <string name="follow_device_type">Theo loại thiết bị</string>
    <string name="follow_product">Theo hãng sản xuất</string>
    <string name="follow_your_location">Theo vị trí gần bạn</string>
    <string name="province_city">Tỉnh/Thành phố:</string>
    <string name="district">Quận/Huyện:</string>
    <string name="price">Giá tiền:</string>
    <string name="all">Tất cả</string>
    <string name="mobile">Điện thoại</string>
    <string name="tablet">Máy tính bảng</string>
    <string name="select_product">Chọn hãng:</string>
    <string name="radius">Bán kính:</string>
    <string name="met">mét</string>
    <string name="find">Tìm Kiếm</string>

    // List Store Page
    <string name="back">Trở ra</string>
    <string name="min_price">Giá thấp nhất của sản phẩm:</string>
    <string name="max_price">Giá cao nhất của sản phẩm:</string>
    <string name="list_store">DANH SÁCH CỬA HÀNG</string>
    <string name="device_detail">XEM CHI TIẾT SẢN PHẨM</string>
    <string name="device_price"> Giá bán của sản phẩm:</string>

    // Nav page
    <string name="nav_menu_find">Danh Mục Tìm Kiếm</string>
    <string name="nav_menu_quick_find">Tìm kiếm nhanh</string>
    <string name="nav_menu_custom_find">Tìm kiếm nâng cao</string>
    <string name="nav_menu_user">Danh Mục Người Dùng</string>
    <string name="nav_menu_sign_up">Tạo Tài Khoản</string>
    <string name="nav_menu_deal">Các Chương Trình Khuyến Mãi</string>
    <string name="nav_menu_sign_out">Đăng xuất</string>

    // Content Description
    <string name="content_description">Content Description</string>

    // Dialog Notice
    <string name="dialog_location_notice">Chức năng này chỉ hỗ trợ khi bạn cho phép ứng dụng được lấy thông tin vị trí hiện tại của bạn. Kích hoạt cho phép lấy vị trí hiện tại và vui lòng thử lại sau khoảng 10 giây.</string>

    // Header Navigation
    <string name="sign_in">Đăng Nhập</string>
    <string name="sign_up">Đăng Kí</string>
    <string name="sign_in_by_facebook">Đăng Nhập Bằng Tài Khoản Facebook</string>

    // Sign In page
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="update_profile">Thông tin tài khoản</string>
    <string name="address">Địa chỉ</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="register_success">Tạo tài khoản thành công</string>
    <string name="sign_in_success">Đăng nhập thành công</string>

    // Setting Profile
    <string name="save_setting">Lưu thay đổi</string>
    <string name="change_password">Thay đổi mật khẩu ...</string>
    <string name="update_success">Cập nhật thành công</string>



    // Change PW
    <string name="please_confirm_your_old_password">Vui lòng xác nhận mật khẩu hiện tại</string>
    <string name="please_fill_new_pass">Vui lòng nhập mật khẩu mới</string>
    <string name="please_refill_new_password">Xác nhận mật khẩu mới</string>
    <string name="error_not_same_pw_confirm">Xác nhận mật khẩu không giống với mật khẩu</string>

    <!-- Dlg Login FB -->
    <string name="app_id">1631498300473927</string>

</resources>
