<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <item android:title="@string/nav_menu_find">
        <menu >
            <item
                android:id="@+id/nav_quick_search"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/nav_menu_quick_find" />
            <item
                android:id="@+id/nav_customize_search"
                android:icon="@drawable/ic_youtube_searched_for_black_24dp"
                android:title="@string/nav_menu_custom_find" />
        </menu>
    </item>

    <item android:title="@string/nav_menu_user">
        <menu>
            <item
                android:id="@+id/nav_sign_up"
                android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
                android:title="@string/nav_menu_sign_up" />

            <item
                android:id="@+id/nav_hot_deal"
                android:icon="@drawable/ic_thumb_up_black_24dp"
                android:title="@string/nav_menu_deal" />

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_delete"
                android:title="@string/nav_menu_sign_out" />
        </menu>
    </item>


</menu>
