<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_button_default_violet"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:clickable="true"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_button_default_violet"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_keyboard_arrow_left" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_back"
            android:textStyle="bold"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:layout_gravity="start|center_vertical"
            />



    </RelativeLayout>


    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_blur"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_blur"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:enabled="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_blur"
        android:hint="@string/address"
        android:inputType="text"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_blur"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />

    <Button
        android:id="@+id/btn_change_pw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_blur_blur_low"
        android:gravity="start|center_vertical"
        android:text="@string/change_password"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_white_violet"
        android:text="@string/save_setting"
        android:textColor="@color/flat_gray_2"
        android:textSize="@dimen/text_size_small" />


</LinearLayout>