<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/white_blur"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_blur"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_blur"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_size_xnormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_white_violet"
        android:text="@string/nav_menu_sign_up"
        android:textColor="@color/flat_gray_2"
        android:textSize="@dimen/text_size_small" />


</LinearLayout>
