<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0F1"
    android:orientation="vertical">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_button_default_violet"
            android:clickable="true"
            android:src="@drawable/ic_keyboard_arrow_left" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="start|center_vertical"
            android:layout_toEndOf="@+id/btn_back"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/please_confirm_your_old_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <EditText
        android:id="@+id/edt_old_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:background="@color/gray"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/please_fill_new_pass"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <EditText
        android:id="@+id/edt_new_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:background="@color/gray"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/please_refill_new_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <EditText
        android:id="@+id/edt_renew_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:background="@color/gray"
        android:layout_marginStart="15dp">

    </LinearLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/button_width_size_normal"
        android:layout_height="@dimen/button_height_size_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_primary_sub"
        android:text="@string/save_setting"
        android:textColor="@color/white" />


</LinearLayout>